<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/loadingData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/stockLayout"
            android:layout_width="135dp"
            android:layout_height="253dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="44dp"
            android:background="@drawable/rectangel_stock"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_monitoring">

            <com.skydoves.progressview.ProgressView
                android:id="@+id/stock"
                android:layout_width="65dp"
                android:layout_height="195dp"
                android:layout_marginTop="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:progressView_autoAnimate="true"
                app:progressView_colorBackground="@color/background"
                app:progressView_colorProgress="@color/primary"
                app:progressView_labelColorInner="@color/primaryText"
                app:progressView_labelColorOuter="@color/primaryText"
                app:progressView_labelSize="13sp"
                app:progressView_labelSpace="10dp"
                app:progressView_labelText="50%"
                app:progressView_labelTypeface="bold"
                app:progressView_max="100"
                app:progressView_min="0"
                app:progressView_orientation="vertical"
                app:progressView_progress="50"
                app:progressView_progressFromPrevious="true"
                app:progressView_radius="20dp" />

            <TextView
                android:id="@+id/txtStock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/stock"
                android:textColor="@color/primaryText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/stock" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/drawable_top_right_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/top_left_home" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/drawable_top_left_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/top_right_home" />

        <TextView
            android:id="@+id/greeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginTop="56dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/greetings"
            android:textColor="@color/primaryText"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/userName"
            android:textColor="@color/primaryText"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/greeting" />

        <TextView
            android:id="@+id/txt_monitoring"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginTop="13dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/monitoring_system"
            android:textColor="@color/primaryText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView6" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/lightLayout"
            android:layout_width="135dp"
            android:layout_height="120dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rectangel_item"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_monitoring">

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/switchLight"
                style="@style/customSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/switch_label"
                android:textColor="@color/primaryText"
                android:fontFamily="@font/poppins_semibold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lightIcon"
                tools:ignore="VisualLintBounds" />

            <ImageView
                android:id="@+id/lightIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/toggleLight"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/light"
                tools:ignore="ContentDescription" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/feedLayout"
            android:layout_width="135dp"
            android:layout_height="120dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/rectangel_item"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lightLayout">

            <RelativeLayout
                android:layout_width="69dp"
                android:layout_height="69dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/btn_oval"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/power" />
            </RelativeLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="11dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="Feed"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/measurementLayout"
            android:layout_width="324dp"
            android:layout_height="140dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/rectangel_stock"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stockLayout">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="40dp">

                <com.mikhaellopez.circularprogressbar.CircularProgressBar
                    android:id="@+id/circleTemp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:cpb_background_progressbar_color="@color/background"
                    app:cpb_background_progressbar_width="5dp"
                    app:cpb_progress="60"
                    app:cpb_progress_direction="to_right"
                    app:cpb_progress_max="100"
                    app:cpb_progressbar_color="@color/primary"
                    app:cpb_progressbar_width="10dp"
                    app:cpb_round_border="true"
                    app:cpb_start_angle="210"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tempLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="Temperature"
                    android:textColor="@color/primaryText"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/tempIndicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="30°C"
                    android:textColor="@color/primaryText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/guideline2" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_begin="50dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="100dp"
                android:layout_height="match_parent">

                <com.mikhaellopez.circularprogressbar.CircularProgressBar
                    android:id="@+id/circleHum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:cpb_background_progressbar_color="@color/background"
                    app:cpb_background_progressbar_width="5dp"
                    app:cpb_progress="58"
                    app:cpb_progress_direction="to_right"
                    app:cpb_progress_max="100"
                    app:cpb_progressbar_color="@color/primary"
                    app:cpb_progressbar_width="10dp"
                    app:cpb_round_border="true"
                    app:cpb_start_angle="210"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/humIndicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="58%"
                    android:textColor="@color/primaryText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/guideline3" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_begin="50dp" />

                <TextView
                    android:id="@+id/humLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="Humidity"
                    android:textColor="@color/primaryText"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>